2000-09-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* procs.h (SCM_CCLO_LENGTH, SCM_SET_CCLO_LENGTH, SCM_CCLO_BASE,
	SCM_SET_CCLO_BASE, SCM_CCLO_REF, SCM_CCLO_SET, SCM_CCLO_SUBR,
	SCM_SET_CCLO_SUBR):  Added resp. changed such that none of the
	macros SCM_CHARS, SCM_SETCHARS, SCM_VELTS and SCM_LENGTH have to
	be used with compiled closures any more.

	* procs.c (scm_makcclo), gsubr.h (SCM_GSUBR_TYPE, SCM_GSUBR_PROC):
	Replace uses of SCM_CHARS, SCM_SETCHARS and SCM_VELTS with regards
	to compiled closures.

	* gsubr.h (SCM_SET_GSUBR_TYPE, SCM_SET_GSUBR_PROC):  Added.

	* gsubr.c (scm_make_gsubr):  Use them.

2000-09-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_adjbig):  Use SCM_BDIGITS instead of SCM_CHARS.

	(big2str, scm_bigprint):  Use SCM_STRING_CHARS instead of
	SCM_CHARS.

	* vectors.c (scm_vector_set_length_x):  Distinguish between
	strings, scheme vectors and uniform vectors, thus getting rid of
	references to SCM_CHARS.  (The code still needs improvement.)

2000-09-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_m_letrec1, SCM_CEVAL, SCM_APPLY):  Use
	SCM_STRING_U?CHARS or SCM_SYMBOL_U?CHARS instead of SCM_U?CHARS.

	* unif.h (SCM_UVECTOR_BASE), vectors.h (SCM_VECTOR_BASE):  Added
	as replacements for SCM_CHARS and SCM_VELTS.

2000-09-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.c (scm_make_cont, scm_dynthrow), print.c
	(scm_iprin1), stacks.c (scm_make_stack, scm_stack_id,
	scm_last_stack_frame):  For continuations, use SCM_CONTREGS
	instead of SCM_CHARS.

	* coop-threads.c (scm_threads_mark_stacks):  Eliminate references
	to SCM_LENGTH and SCM_CHARS from comments.

	* dynl.c (scm_dynamic_link, scm_dynamic_func), symbols.h
	(SCM_ROCHARS, SCM_ROUCHARS):  Cleanly distinguish between string
	and symbol arguments.

	* hash.c (scm_hasher), keywords.c (prin_keyword), objects.c
	(scm_make_subclass_object), print.c (scm_iprin1), regex-posix.c
	(scm_regexp_error_msg), stime.c (bdtime2c, scm_strftime), struct.c